feat: Implement filter by transaction error - MEED-7642 - Meeds-io/MIPs#154 (#624)
This PR will Implement wallet rewards filter by transaction error.